--- a/Configs/knockd.conf
+++ b/Configs/knockd.conf
@@ -1,1 +1,10 @@
-/etc/knockd.conf
+[options]
+	UseSyslog
+
+[opencloseSSH]
+	sequence      = 2222:udp,3333:tcp,4444:udp
+	seq_timeout   = 15
+	tcpflags      = syn,ack
+	start_command = /bin/firewall-cmd --zone=public --add-service=ssh 
+	cmd_timeout   = 10
+	stop_command  = /bin/firewall-cmd --zone=public --remove-service=ssh 
